nicolai.ruckel.de/themes/nicolai/static/css/style.css
* {
  padding: 0;
  margin: 0;
}

:root {
  --fg-color: #24292e;
  --link-color: #005faf;
  --link-color-visited: #870087;
  --main-color: #005faf;
  --title-color: #ffffff;
  --max-width: 960px;
}

body {
  font-family: "Open Sans", sans-serif;
  line-height: 1.6;
  font-size: 18px;
  color: var(--fg-color);
}

a:link,
a:visited,
a:active {
  color: var(--link-color);
  text-decoration: none;
}

h1, h2, h3, h4, h5 {
  line-height:1.2
  color: var(--fg-color);
}

h1 {
  font-size: 2.0em;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.2em;
}

header {
  /* margin-top: 2em; */
  margin-bottom: 2em;
}

#titlebar {
  text-align: left;
  /* margin-top: 3em; */
  margin-bottom: 1.5em;
  background-color: var(--main-color);
}

#title {
  margin: 0px auto;
  max-width: var(--max-width);
  text-align: right;
}

header h1 {
  line-height: 1.2;
  font-size: 2.5em;
}

header h2 {
  line-height: 1;
  font-size: 1.5em;
  font-weight: 500;
}

header h1 a:link,
header h1 a:visited,
header h1 a:active {
  color: var(--title-color);
}

main h1 {
  width: 100%;
  text-align: left;
}

main {
  margin: 40px auto;
  max-width: var(--max-width);
}

.post-date {
  width: 100%;
  text-align: left;
}

article h1,
article h2,
article h3,
article h4,
article h5{
  text-align: left;
  margin: 0.5em 0 0.2em 0;
  font-weight: 500;
}

article h1 {
  font-size: 2.0em;
}

article {
  margin: 0em 0 1em 0;
  text-align: justify;
}

article p {
  padding: 0.5em 0em;
}

article a:visited {
  color: var(--link-color-visited);
}

article ol,
article ul{
  margin: 0.5em 0 0.5em 2em;
}

code {
  background-color: #f6f8fa;
}

nav {
  margin: 40px auto;
  max-width: var(--max-width);
}

nav ul li {
  display: inline;
  font-size: 1.2em;
}

.nav-main {
  display: inline;
  font-size: 1.2em;
  list-style: none;
  display: flex;
  justify-content: flex-start;
  font-weight: 600;
  position: absolute;
}

.nav-main li {
  margin-right: 1.5em;
}

.social {
  list-style: none;
  display: flex;
  justify-content: flex-end;
}

.social li {
  padding-left: 2em;
}

.social img {
  height: 1.2em;
  width: auto;
}

.recent ul {
  list-style: none;
}

.posts {
  margin: 0em 0em 1em 0em;
}

.posts ul {
  list-style: none;
}

footer {
  font-weight: 300;
  text-align: center;
}

